# ott-or-not

./: README.md
curator/: README.md  pyproject.toml
curator/alembic/versions/: 2024_06_11_2017-initialize_original_tables.py
curator/curator/: cli.py  dataset.py  directory_import.py  image_repository.py  inventory.py  repo_utilities.py  search.py  search_and_download.py
curator/tests/: test_image_repository.py
database_migrations/: alembic.ini  docker-compose.yaml  pyproject.toml
database_migrations/alembic/: env.py
database_migrations/alembic/versions/: 2024_05_11_1141-initial_structure.py
front-end/: Dockerfile  README.md  aws.py  docker-compose.yaml  pyproject.toml  tasks.py
front-end/front_end/: pyproject.toml
model-development/: Makefile  pyproject.toml
model-development/notebooks/: scratchpad.ipynb
model-development/src/model_development/: gpu_check_flow.py
modeling_notebooks/: README.md  pyproject.toml
modeling_notebooks/modeling_notebooks/resnet_selection/: 01_select_resnet_version_for_otter_filter.ipynb  02_species_predict_river_sea.ipynb  model_eval_utilities.py  resnet_scorer.py
novel-text/: chapter_1.md  chapter_2.md  chapter_3.md
oon_utilities/: pyproject.toml
oon_utilities/curator/: image_repository.py
oon_utilities/oon_utilities/: configuration.py  image_fetcher.py  scratchpad.py
oon_utilities/oon_utilities/curator/: directory_import.py  image_repository.py
oon_utilities/tests/: test_image_repository.py
ottornot/: pyproject.toml
ottornot/ottornot/api/: main.py
ottornot/ottornot/ui/: main.py
workbench/: pyproject.toml
workbench/workbench/alchemy/: orm_tables.py
workbench/workbench/notebooks/: orm_scratchpad.ipynb
