[tool.poetry]
name = "curator"
version = "0.1.0"
description = ""
authors = ["Christian Bonnell <christian.bonnell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"
pydantic = "^2.7.2"
click = "^8.1.7"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
