[tool.poetry]
name = "database-migrations"
version = "0.1.0"
description = ""
authors = ["christianbonnell <christian.bonnell@gmail.com>"]
readme = "README.md"
packages = [{include = "database_migrations"}]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
psycopg = "^3.1.19"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
