[project]
name = "model-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.5",
    "metaflow>=2.19.20",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "torch==2.10.0",
    "torchvision==0.25",
    "wandb>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
