[tool.poetry]
name = "modeling-notebooks"
version = "0.1.0"
description = ""
authors = ["Christian Bonnell <christian.bonnell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
fastai = "^2.7.15"
plotnine = "^0.13.6"
sqlalchemy = "^2.0.30"
oon-utilities = {path = "../oon_utilities", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
