[project]
name = "ottornot"
version = "0.1.0"
description = ""
authors = [
    {name = "christianbonnell",email = "christian.bonnell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "ottornot"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
hello-api="ottornot.api.main:hello"
hello-ui="ottornot.ui.main:hello"