[tool.poetry]
name = "workbench"
version = "0.1.0"
description = ""
authors = ["christianbonnell <christian.bonnell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
curator = {path = "../curator", develop = true}
jupyterlab = "^4.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
rich = "^13.7.1"
click = "^8.1.7"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
